Fix flickering on shadcn overlay show

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,6 +136,9 @@
 :root {
   margin: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
+}
+
+:root:not(:has(body[data-scroll-locked='1'])) {
   scrollbar-gutter: stable;
 }
 
